--- a/apache/conf/extra/httpd-vhosts.conf
+++ b/apache/conf/extra/httpd-vhosts.conf
@@ -1,12 +1,12 @@
 <VirtualHost *:80>
-DocumentRoot C:\work\reversiphp
-ServerName reversiphp.com
+DocumentRoot C:\work\reversi4colorphp
+ServerName reversi4colorphp.com
 
 # Other directives here
 
 </VirtualHost>
 
-<Directory "C:\work\reversiphp">
+<Directory "C:\work\reversi4colorphp">
     Options Indexes
     AllowOverride All
     Require all granted
